--- a/src/components/ContainerPage/ContainerPage.css
+++ b/src/components/ContainerPage/ContainerPage.css
@@ -1,12 +1,13 @@
 .container-page {
 
-    max-width: 800px;;
+    max-width: 800px;
+    ;
     display: grid;
     gap: 20px;
-    
+
     margin: 0 auto;
     padding-bottom: 2rem;
-    
+
 
     aside {
         grid-area: aside;
@@ -14,7 +15,7 @@
         flex-direction: column;
         gap: 20px;
     }
-    
+
     main {
         grid-area: main;
     }
@@ -24,47 +25,47 @@
     grid-template-columns: 280px 1fr 1fr;
 
     grid-template-areas:
-    "nav nav nav"
-    "aside main main";
+        "nav nav nav"
+        "aside main main";
 }
 
 .a-right {
     grid-template-columns: 1fr 1fr 280px;
 
     grid-template-areas:
-    "nav nav nav"
-    "main main aside"
+        "nav nav nav"
+        "main main aside"
 }
 
 .mobile {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
-    "nav nav nav"
-    'main main main'
-    "aside aside aside";
+    grid-template-areas:
+        "nav nav nav"
+        'main main main'
+        "aside aside aside";
 }
 
 .mobile-user {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
-    "nav nav nav"
-    "aside aside aside"
-    'main main main';
+    grid-template-areas:
+        "nav nav nav"
+        "aside aside aside"
+        'main main main';
 }
 
 /* O container <nav> que segura os rádios */
 .tabs-nav {
-    grid-area: nav; 
+    grid-area: nav;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    
+
     background: white;
 
     border: 1px solid #0000001a;
     border-radius: 10px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    margin-bottom: 24px; 
+    margin-bottom: 24px;
 }
 
 .radio-tab-item {
@@ -79,25 +80,28 @@
 .radio-tab-item label {
     display: block;
     text-align: center;
-    padding: 12px ;
+    padding: 12px;
     cursor: pointer;
-    color: #666; /* Cor da aba inativa */
+    color: #666;
+    /* Cor da aba inativa */
     font-weight: 500;
     font-size: 0.8rem;
     /* Borda inativa */
-    border-bottom: 3px solid transparent; 
+    border-bottom: 3px solid transparent;
     transition: all 0.2s ease;
 }
 
 /* Estilo da ABA ATIVA (quando o radio está :checked) */
-.radio-tab-item input[type="radio"]:checked + label {
-    color: #333; /* Cor da aba ativa */
+.radio-tab-item input[type="radio"]:checked+label {
+    color: #333;
+    /* Cor da aba ativa */
     /* Você pode usar seu verde aqui, se quiser */
-    border-bottom-color: #333; /* Cor da linha ativa (como na imagem) */
+    border-bottom-color: #333;
+    /* Cor da linha ativa (como na imagem) */
 }
 
 /* Efeito hover para abas inativas */
-.radio-tab-item input[type="radio"]:not(:checked) + label:hover {
+.radio-tab-item input[type="radio"]:not(:checked)+label:hover {
     color: #333;
-    border-bottom-color: #e0e0e0; 
+    border-bottom-color: #e0e0e0;
 }
