--- a/src/components/Forms/Entity/EntityModal.css
+++ b/src/components/Forms/Entity/EntityModal.css
@@ -57,7 +57,7 @@
 }
 
 /* --- Layout Grid Responsivo --- */
-.row-col2 {
+.row-col2, .row-col3 {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -68,6 +68,20 @@
     .row-col2 {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        /* Duas colunas iguais */
+        gap: 20px;
+    }
+
+    .row-col3 {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        
+        gap: 20px;
+    }
+
+    .row-col4 {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
         /* Duas colunas iguais */
         gap: 20px;
     }
